Revise the prose of the paper

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -6,7 +6,7 @@ thanks: "Code and data are available at: [Broadway_Gross](https://github.com/Isa
 date: today
 date-format: long
 toc: true
-abstract: "This study employs multiple linear regression to examine factors influencing weekly gross revenue on Broadway, focusing on key predictors such as average ticket price, seating capacity, number of performances, holiday weeks, and Tony Award months. A $1 increase in average ticket price adds $9,168 to weekly revenue, while an additional performance contributes $70,688, and each new seat generates $699.82, underscoring the importance of pricing and demand strategies over simply expanding seating capacity. Holiday weeks boost revenue by $16,684, but this modest increase relative to NYC’s tourism surge reveals untapped potential for Broadway to enhance its appeal as a premier holiday destination. Conversely, Tony Award months are linked to a $7,140 decline in weekly revenue, highlighting the need to reposition the awards season as an industry-wide promotional opportunity to benefit all productions."
+abstract: "This study examines factors influencing weekly gross revenue on Broadway, focusing on key predictors such as average ticket price, seating capacity, number of performances, holiday weeks, and Tony Award months. A $1 increase in average ticket price adds $9,168 to weekly revenue, while an additional performance contributes $70,688, and each new seat generates $699.82, underscoring the importance of pricing and demand strategies over simply expanding seating capacity. Holiday weeks boost revenue by $16,684, but this modest increase relative to NYC’s tourism surge shows untapped potential for Broadway to enhance its appeal as a premier holiday destination. Conversely, Tony Award months are linked to a $7,140 decline in weekly revenue, highlighting the need to reposition the awards season as an industry-wide promotional opportunity to benefit all productions."
 format: pdf
 number-sections: true
 bibliography: references.bib
@@ -33,13 +33,13 @@ analysis_data <- read_parquet(here("data", "02-analysis_data", "cleaned_broadway
 
 Broadway, located in the heart of New York City's Theater District, comprises 41 theaters in Midtown Manhattan, extending from 42nd to 53rd Streets and between 6th and 8th Avenues [@broadway2021]. Renowned as a cultural and economic landmark, Broadway plays a pivotal role in shaping the city's global reputation and driving its economy. For stakeholders, understanding the drivers of Broadway revenue is essential, as it directly informs strategic decisions on pricing, scheduling, and resource allocation to maximize profitability and sustain operations. This study seeks to identify and quantify the key factors influencing Broadway’s weekly gross revenue, utilizing datasets created by Alex Cookson [@cookson_broadway_grosses], which are derived from data originally provided by Playbill [@playbill_grosses].
 
-The estimand of interests in this study is the average change in weekly gross revenue for Broadway productions associated with specific predictors, including ticket price, seating capacity, number of performances, holiday weeks, and Tony Award months, while holding other factors constant. This measure captures the independent impact of each variable on revenue. While the true estimand is inherently unknown due to potential unobserved confounders, it is approximated using multiple linear regression, relying on the available data and model assumptions. Clearly defining the estimand ensures the analysis aligns with the research objectives, facilitates interpretation of the relationships between predictors and revenue, and addresses potential biases from factors such as omitted variables or measurement errors, ensuring the findings remain meaningful and relevant for revenue optimization.
+The estimand of interest in this study is the average change in weekly gross revenue for Broadway productions, attributed to specific predictors such as ticket price, seating capacity, number of performances, holiday weeks, and Tony Award months, while holding other factors constant. This measure captures the independent impact of each variable on revenue. While the true estimand is inherently unknown due to potential unobserved confounders, it is approximated using multiple linear regression, relying on the available data and model assumptions. Clearly defining the estimand ensures the analysis aligns with the research objectives, facilitates interpretation of the relationships between predictors and revenue, and addresses potential biases from factors such as omitted variables or measurement errors, ensuring the findings remain meaningful and relevant for revenue optimization.
 
-The analysis reveals that ticket pricing, seating capacity, performance frequency, and holiday weeks positively impact Broadway's weekly gross revenue. Specifically, each additional performance generates $70,688, while holiday weeks add $16,684 to weekly revenue. Conversely, Tony Award months are associated with a $7,240 decline in weekly gross revenue, underscoring the need to adjust strategies to better capitalize on this period.
+The analysis shows that ticket pricing, seating capacity, performance frequency, and holiday weeks positively impact Broadway's weekly gross revenue. Specifically, each additional performance generates $70,688, while holiday weeks add $16,684 to weekly revenue. Conversely, Tony Award months are associated with a $7,240 decline in weekly gross revenue, underscoring the need to adjust strategies to better capitalize on this period.
 
-These findings highlight both the opportunities and challenges Broadway faces in maximizing its revenue. Prioritizing revenue per seat over simply increasing seating capacity offers a more effective approach to boosting Broadway's financial performance. Additionally, significant potential can be unlocked through strategies such as holiday packages, partnerships with tourism boards, and enhancing the on-site experience with festive offerings and merchandise. To address the negative impact of Tony Award months, initiatives exclusive ticket bundles, targeted promotions, and expanded media engagement can help capitalize on the event’s visibility. 
+These findings highlight both the opportunities and challenges Broadway faces in maximizing its revenue. Prioritizing revenue per seat over simply increasing seating capacity presents a more effective approach to boosting Broadway's financial performance. Additionally, significant potential can be unlocked through strategies such as holiday packages, partnerships with tourism boards, and enhancing the on-site experience with festive activities and merchandise. To address the negative impact of Tony Award months, initiatives exclusive ticket bundles, targeted promotions, and expanded media engagement can help capitalize on the event’s visibility. 
 
-The remainder of this paper is structured as follows: @sec-data provides an overview of the dataset and visualizations of the variables. @sec-model-set-up details the modeling approach, including predictor selection and the regression model structure. @sec-results presents the primary findings and outcomes of the model. Finally, @sec-discussion explores the key findings, highlights the main takeaways, addresses the study's weaknesses, and outlines potential next steps. @sec-Appendix1 contains the idealized survey designed to gather more detailed information, while @sec-Appendix2 provides supplementary information about the current dataset. Lastly, @sec-model includes diagnostic analyses of the model.
+The remainder of this paper is structured as follows: @sec-data provides an overview of the dataset and visualizations of the variables. @sec-model-set-up details the modeling approach, including predictor selection and the regression model structure. @sec-results presents the outcomes of the model. Finally, @sec-discussion explores the key findings, highlights the main takeaways, addresses the study's weaknesses, and outlines potential next steps. @sec-Appendix1 contains the idealized survey designed to gather more detailed information, while @sec-Appendix2 provides supplementary information about the current dataset. Lastly, @sec-model includes diagnostic analyses of the model.
 
 
 # Data {#sec-data}
@@ -48,15 +48,15 @@ The remainder of this paper is structured as follows: @sec-data provides an over
 
 This study utilizes R packages [@citeR] for data cleaning and analysis, incorporating libraries from tidyverse [@tidyverse], ggplot2 [@ggplot2], knitr [@knitr], arrow [@arrow], here [@here], scales [@scales], and modelsummary [@modelsummary]. The **tidyverse** package is employed for data manipulation, such as filtering, grouping, and reshaping datasets. **ggplot2** is used for data visualization, creating a range of plots to explore and present trends in the data. **knitr** facilitates the integration of analysis and reporting by generating dynamic reports in R Markdown. **arrow** is used for efficient handling of large datasets, particularly for reading and writing data in Parquet format to optimize storage and processing. The **here** package ensures reproducibility by standardizing file paths in the project directory, making it easier to locate and load data files. Finally, **scales** is employed to enhance the readability of plots by formatting axes, labels, and scales, ensuring clarity in the presentation of numeric and categorical data.
 
-The dataset, compiled by Alex Cookson [@cookson_broadway_grosses] and derived from data originally provided by Playbill [@playbill_grosses], represents Broadway's weekly grosses. The data cleaning process involved grouping observations and removing missing values. The final dataset consists of 14,519 observations across 9 variables: `week_number`, `weekly_gross`, `avg_ticket_price`, `seats_in_threatre`, `performances`, `year`, `month`, `holiday_week` and `Tony_Award`. The dataset used for this analysis spans from the beginning of 2010 to the end of 2019.
+The dataset, compiled by Alex Cookson [@cookson_broadway_grosses] and derived from data originally provided by Playbill [@playbill_grosses]. The data cleaning process involved grouping observations and removing missing values. The final dataset consists of 14,519 observations across 9 variables: `week_number`, `weekly_gross`, `avg_ticket_price`, `seats_in_threatre`, `performances`, `year`, `month`, `holiday_week` and `Tony_Award`. The dataset used for this analysis spans from the beginning of 2010 to the end of 2019.
 
 ## Measurement and Considerations
 	
 The dataset for this study originates from Playbill [@playbill_grosses], which collects information about Broadway shows through direct reporting and partnerships with industry organizations. A significant portion of the data, particularly box office grosses and performance metrics, is provided by The Broadway League [@broadway_statistics], a national trade association for the Broadway industry.
 
-The transformation of real-world phenomena into the dataset begins with data collection. The Internet Broadway Database (IBDB), maintained by The Broadway League, compiles detailed records of Broadway productions using sources like theater programs to document cast and crew information [@ibdb_about]. Additional data is supplemented by newspaper and magazine reports, theatrical textbooks, interviews with theater professionals, and The League's archival records. This information is then processed into key metrics, including ticket sales, attendance, revenue, and theater utilization, which are published weekly. Before release, The League’s research department verifies the data’s accuracy and removes personal information to ensure privacy.
+The transformation of real-world phenomena into the dataset begins with data collection. The Internet Broadway Database (IBDB), maintained by The Broadway League, compiles detailed records of Broadway productions using theater programs to document cast and crew information [@ibdb_about]. Additional data is supplemented by newspaper and magazine reports, theatrical textbooks, interviews with theater professionals, and The League's archival records. This information is then processed into key metrics, including ticket sales, attendance, revenue, and theater utilization, which are published weekly. Before release, The League’s research department verifies the data’s accuracy and removes personal information to ensure privacy.
 
-However, converting real-world phenomena into dataset entries inevitably results in the loss of important contextual details. For example, shows offering premium tickets or standing-room sales may disproportionately inflate weekly grosses compared to productions without these options. While the dataset includes a top ticket price metric, it does not specify the number of tickets sold at this price, leaving gaps in understanding revenue dynamics. Similarly, discounts and promotions, such as rush tickets or group sales, can lower the average ticket price, potentially underestimating the perceived value of tickets sold. Additionally, although the dataset includes weekly metrics, it does not specify whether performances took place on weekdays or weekends, limiting the analysis of gross patterns. These limitations underscore the challenges of translating complex industry data into simplified metrics for analysis.
+However, converting real-world phenomena into publicly available dataset entries inevitably leads to the loss of important contextual details in such circumstances. For example, productions that include premium tickets or standing-room sales may disproportionately increase weekly grosses compared to those without these options. While the dataset includes a top ticket price metric, it does not specify the number of tickets sold at this price, leaving gaps in understanding revenue dynamics. Similarly, discounts and promotions, such as rush tickets or group sales, can lower the average ticket price, potentially underestimating the perceived value of tickets sold. Additionally, although the dataset includes weekly metrics, it does not specify whether performances took place on weekdays or weekends, limiting the analysis of gross patterns. These limitations underscore the challenges of translating complex industry data into simplified metrics for analysis.
 
 ## Outcome variables
 
@@ -344,8 +344,6 @@ Key Assumptions:
 - Normality of Residuals: The residuals are normally distributed.
 - No Multicollinearity: Independent variables are not highly correlated with each other.
 
-Background details and diagnostics are included in [Appendix -@sec-model].
-
 The model in this study is designed to predict weekly gross revenue using the following predictors:
 
 - Average Ticket Price (`avg_ticket_price`): The average price of tickets sold during the week.
@@ -370,6 +368,7 @@ Where:
 \sigma^2 & \text{ is the variance of the error term}
 \end{align}
 
+Background details and diagnostics are included in [Appendix -@sec-model].
 
 We run the model in R [@citeR] using the `stats` package from base R. The lm() function from this package was used to fit the multiple linear regression model. 
 
@@ -394,7 +393,7 @@ For holiday weeks, we predict a positive effect on weekly gross revenue, as holi
 Finally, the year variable is included to account for long-term trends, with an expected positive effect reflecting the steady growth of Broadway's gross revenue over the years.
 
 # Results {#sec-results}
-The results of the multiple linear regression model are presented in @fig-model, with more detailed information summarized in @tbl-modelresults in [Appendix -@sec-model]. While some findings align with our expectations, others reveal notable deviations.
+The results of the multiple linear regression model are presented in @fig-model, with more detailed information summarized in [Appendix -@sec-model]. While some findings align with our expectations, others highlight notable deviations.
 
 As anticipated, average ticket price, seating in theater, and number of performances exhibit significant positive relationships with weekly gross revenue. Specifically, increases in ticket prices and theater size lead to higher gross revenue, consistent with the notion that larger venues and premium ticketing contribute to revenue growth. Similarly, the significant positive impact of the number of performances aligns with our expectation that additional shows increase overall revenue by accommodating more audiences. Notably, the confidence intervals for these estimates are relatively narrow, suggesting that the relationships are estimated with high precision and are robust.
 
@@ -403,7 +402,6 @@ The findings for holiday weeks also meet initial expectations, showing a positiv
 The results for Tony Award months diverge from our initial expectations. Contrary to the assumption that Tony Award months would boost revenue due to increased demand or publicity, the coefficients for these variables are negative, suggesting a slight decrease in weekly gross revenue during these periods. Additionally, the confidence interval for this variable is wide and crosses zero, indicating uncertainty about the direction and magnitude of the effect. This suggests that the observed negative coefficient may not represent a consistent trend and warrants caution when interpreting the impact of Tony Award months on revenue.
 
 Lastly, the year variable exhibits a small but positive effect, consistent with the expectation of a gradual upward trend in Broadway revenue over the years. The relatively narrow confidence interval for this variable provides strong support for the observed trend, likely reflecting the broader growth of the industry due to factors such as inflation or expanding audience engagement. Overall, the model confirms some hypotheses while highlighting discrepancies in the data, prompting further discussion and analysis in the next section.
-
 
 ```{r}
 #| label: fig-model
@@ -452,21 +450,21 @@ This paper presents a multiple linear regression analysis to examine the factors
 
 ## Prioritizing Per-Seat Value Over Expanding Seating Capacity
 
-While increasing seating capacity and performance frequency predictably boosts revenue, the marginal gains from these factors differ significantly depending on audience demand and pricing strategy. The revenue per additional seat, estimated at $699.82, is substantially lower than the per-show contribution of $70,688.48 or the impact of a $1 increase in ticket price, which generates $9,168. This result reflects that simply increasing seating capacity, without addressing demand or ticket pricing, offers limited revenue gains. The impact of additional seats becomes most meaningful only when shows consistently sell out, underscoring the importance of strategies that drive full occupancy.
+While increasing seating capacity and performance frequency predictably boosts revenue, the marginal gains from these factors differ significantly depending on audience demand and pricing strategy. The revenue per additional seat, estimated at $699.82, is substantially lower than the per-show contribution of $70,688.48 or the impact of a $1 increase in ticket price, which generates $9,168. This result reflects that simply increasing seating capacity, without addressing demand or ticket pricing, results in limited revenue gains. The impact of additional seats becomes most meaningful only when shows consistently sell out, underscoring the importance of strategies that drive full occupancy.
 
-The balance between ticket price and capacity is particularly significant, as a smaller venue with higher ticket prices can outperform a larger theater with lower-priced tickets. For instance, @leslie2004price demonstrates that optimizing ticket prices across seating sections can generate substantial revenue, often surpassing strategies focused solely on increasing seating capacity. Initiatives such as offering premium seating with added amenities, backstage tours, or bundled packages that include dining and entertainment can further enhance revenue while improving the audience experience. As emphasized by @ozhegova2018heterogeneity, understanding demand elasticity is essential, as premium seating typically exhibits lower price sensitivity, making it a key factor in strategic pricing decisions.
+The balance between ticket price and capacity is particularly significant, as a smaller venue with higher ticket prices can outperform a larger theater with lower-priced tickets. For instance, @leslie2004price demonstrates that optimizing ticket prices across seating sections can generate substantial revenue, often surpassing strategies focused solely on increasing seating capacity. Initiatives such as providing premium seating with added amenities, backstage tours, or bundled packages that include dining and entertainment can further enhance revenue while improving the audience experience. As emphasized by @ozhegova2018heterogeneity, understanding demand elasticity is essential, as premium seating typically exhibits lower price sensitivity, making it a key factor in strategic pricing decisions.
 
 ## Maximizing Holiday Demand
 
 The model results show that holiday weeks increase weekly gross revenue by an average of $16,684, reflecting a notable seasonal boost and aligning with expectations of higher audience availability during festive periods. Holiday weeks are a time when families often travel or plan special outings, and New York City, home to Broadway, becomes a global attraction with iconic events like the Rockefeller Center Christmas Tree Lighting, bustling holiday markets, and the New Year’s Eve Ball Drop in Times Square. This festive atmosphere draws millions of tourists. However, the relatively modest increase of $16,684 per week suggests that Broadway may not be fully capitalizing on its unique position as a holiday destination. Studies on tourist behavior during holidays indicate that travelers are more inclined to seek unique and memorable experiences during festive periods [@pearce2013minds], creating a prime opportunity for Broadway to enhance its gross revenue and establish itself as a must-visit holiday experience.
 
-To better take advantage of its location and the influx of holiday visitors, Broadway could implement targeted strategies to make attending shows more convenient and appealing. Collaborating with hotels, travel agencies, and tourism boards to offer bundled holiday packages that include show tickets could position Broadway as an essential part of visitors’ holiday itineraries. Moreover, enhancing the on-site experience with seasonal concessions, festive decor, and exclusive holiday merchandise could create a more engaging and memorable experience, attracting more visitors and driving additional revenue during this lucrative season.
+To better take advantage of its location and the influx of holiday visitors, Broadway could implement targeted strategies to make attending shows more convenient and appealing. Collaborating with hotels, travel agencies, and tourism boards to provide bundled holiday packages that include show tickets could position Broadway as an essential part of visitors’ holiday itineraries. Moreover, enhancing the on-site experience with seasonal concessions, festive decor, and exclusive holiday merchandise could create a more engaging and memorable experience, attracting more visitors and driving additional revenue during this lucrative season.
 
 ## Transforming the Tony Awards as an Industry-Wide Opportunity
 
-Tony Award months show a negligible or slightly negative impact on overall revenue, with an estimated effect of $-7,140, challenging the assumption that the awards season boosts Broadway’s financial performance. However, @boyle2009broadway finds that Tony Awards increase a production’s revenue by 12% in the week immediately following the event. This discrepancy likely stems from media attention and ticket sales being concentrated on a few nominated or winning shows, while most productions see little benefit. Additionally, @reddy1998exploring highlights the significant role of critics’ reviews in driving Broadway success, further emphasizing the missed opportunity to leverage the publicity generated by the Tony Awards to benefit all productions more broadly.
+Tony Award months show a negligible or slightly negative impact on overall revenue, with an estimated effect of $-7,140, challenging the assumption that the awards season boosts Broadway’s financial performance. However, @boyle2009broadway finds that Tony Awards increase a production’s revenue by 12% in the week immediately following the event. This discrepancy likely stems from media attention and ticket sales being concentrated on a few nominated or winning shows, while most productions see little benefit. Additionally, @reddy1998exploring highlights the significant role of critics’ reviews in driving Broadway success, further emphasizing the missed opportunity to use the publicity generated by the Tony Awards to benefit all productions more broadly.
 
-Thus, Broadway could transform the Tony Awards into an industry-wide promotional platform by adopting strategies that engage a broader audience and distribute the benefits more equitably, extending beyond just the nominated and award-winning productions. Collaborating with media outlets to produce exclusive behind-the-scenes content, interviews with nominees, and live coverage of performances from non-nominated shows could help expand the appeal of the awards season. Additionally, launching a "Broadway Awards Week" featuring discounted tickets, special packages, or unique experiences such as backstage tours could encourage attendance across multiple productions, leveraging the awards buzz to increase overall industry revenue. Centralized marketing campaigns emphasizing the diversity and vibrancy of Broadway’s offerings during this period could further drive engagement and ticket sales across the ecosystem. By shifting the focus from individual winners to promoting the broader Broadway experience, the industry could transform the slight revenue decline during Tony Award months into a period of growth and shared success for all productions.
+Thus, Broadway could transform the Tony Awards into an industry-wide promotional platform by adopting strategies that engage a broader audience and distribute the benefits more equitably, extending beyond just the nominated and award-winning productions. Collaborating with media outlets to produce exclusive behind-the-scenes content, interviews with nominees, and live coverage of performances from non-nominated shows could help expand the appeal of the awards season. Additionally, launching a "Broadway Awards Week" featuring discounted tickets, special packages, or unique experiences such as backstage tours could encourage attendance across multiple productions, leveraging the awards buzz to increase overall industry revenue. Centralized marketing campaigns highlighting the diversity and vibrancy of Broadway’s productions during this period could further enhance engagement and boost ticket sales across the ecosystem. By shifting the focus from individual winners to promoting the broader Broadway experience, the industry could transform the slight revenue decline during Tony Award months into a period of growth and shared success for all productions.
 
 
 ## Weaknesses  
@@ -486,7 +484,7 @@ Incorporating additional variables, such as marketing expenditures, customer dem
 
 Future analyses could examine non-linear relationships and interactions between variables, such as the combined influence of ticket prices and theater size on attendance or how holiday weeks impact revenue differently based on theater capacity, providing a deeper understanding of revenue patterns.
 
-Additionally, conducting separate analyses for different types of productions, such as traditional shows versus new or experimental productions, would help identify the unique revenue drivers for each category. This segmentation would enable more precise strategy recommendations tailored to the specific needs and performance characteristics of different types of Broadway shows. Incorporating these analyses with cost considerations could offer a more detailed approach to optimizing Broadway's economic sustainability.
+Additionally, conducting separate analyses for different types of productions, such as traditional shows versus new or experimental productions, would help identify the unique revenue drivers for each category. This segmentation would enable more precise strategy recommendations tailored to the specific needs and performance characteristics of different types of Broadway shows. Incorporating these analyses with cost considerations could provide a more detailed approach to optimizing Broadway's economic sustainability.
 \newpage
 
 \appendix
@@ -501,13 +499,13 @@ The purpose of this appendix is to outline an idealized methodology and survey d
 
 - To gather audience demographics (e.g., age, income, location) to understand their influence on ticket purchases and attendance patterns. This information can be integrated into the model to enhance its predictive accuracy.
 - To identify purchasing behaviors, such as repeat attendance, pricing sensitivity, and group sales, providing a foundation for refining marketing and pricing strategies.
-- To assess audience motivations and satisfaction, focusing on factors driving show selection and overall theater experience, offering guidance on how to improve Broadway’s organizational and operational strategies.
+- To assess audience motivations and satisfaction, focusing on factors driving show selection and overall theater experience, providing guidance on how to improve Broadway’s organizational and operational strategies.
 
 ## Sampling Strategy
 
-Our sampling strategy utilizes **random sampling** to ensure unbiased representation of Broadway audiences. This approach randomly selects participants from the overall population of Broadway ticket buyers and attendees, minimizing potential biases and ensuring the sample reflects the diversity of the audience.
+Our sampling strategy utilizes ** simple random sampling** to ensure unbiased representation of Broadway audiences. This approach randomly selects participants from the overall population of Broadway ticket buyers and attendees, minimizing potential biases and ensuring the sample reflects the diversity of the audience.
 
-Random sampling provides a robust foundation for generalizable analysis, capturing a wide range of perspectives and behaviors without targeting specific subgroups. This method aims to generate accurate and thorough findings on the factors affecting Broadway’s attendance and revenue dynamics.
+Random sampling provides a robust foundation for generalizable analysis, capturing a wide range of perspectives and behaviors without targeting specific subgroups [@noor2022simple]. This method aims to generate accurate and thorough findings on the factors affecting Broadway’s attendance and revenue dynamics.
 
 A minimum sample size of 1,000 responses per quarter is proposed to ensure statistical robustness across strata and account for seasonality.
 
@@ -518,7 +516,7 @@ Participants will be recruited through a combination of:
 - **In-Theater Surveys**: Surveys distributed at participating Broadway theaters, targeting audiences immediately after the performance for real-time feedback.
 - **Online Platforms**: Email invitations to ticket buyers, links embedded in ticket purchase confirmations, and social media outreach via official Broadway channels.
 - **Tourism Partnerships**: Collaborations with NYC tourism boards, hotels, and travel agencies to engage out-of-town visitors.
-- **Incentives**: Offering discounts on future ticket purchases or exclusive merchandise as incentives for survey participation.
+- **Incentives**: Providing discounts on future ticket purchases or exclusive merchandise as incentives for survey participation.
 
 ## Data Validation and Quality Assurance
 
@@ -706,7 +704,7 @@ What additional suggestions do you have to improve the Broadway experience?
 
 Thank you for participating! Your feedback will play a vital role in enhancing the Broadway experience for future audiences. If you have any questions about this survey or would like to be informed about the results, please contact **isabella.zhou@mail.utoronto.ca**
 
-The survey will be implemented via **Google Forms**, which offers a cost-effective platform for data collection. You can access the survey at the following link: [Google Form Survey](https://docs.google.com/forms/d/e/1FAIpQLScAcdMoMbkOcOnZ_dPCV9xqiN-RMoCjisHEieW84dVjVMMiIA/viewform)
+The survey will be implemented via **Google Forms**, which provids a cost-effective platform for data collection. You can access the survey at the following link: [Google Form Survey](https://docs.google.com/forms/d/e/1FAIpQLScAcdMoMbkOcOnZ_dPCV9xqiN-RMoCjisHEieW84dVjVMMiIA/viewform)
 
 \newpage
 
@@ -714,14 +712,14 @@ The survey will be implemented via **Google Forms**, which offers a cost-effecti
 
 In addition to the dataset used for this study, Broadway conducts several key surveys to collect detailed information on various aspects of Broadway theater. However, the information and datasets collected through these surveys are not publicly accessible for analysis. If this data were made available, merging it with the current dataset could provide a more robust model for gross analysis. These surveys include **The Demographics of the Broadway Audience** [@broadway_demographics_2022], designed to analyze the composition and behavior of Broadway theatergoers.
 
-- **Sampling Method**: The survey is typically conducted annually, with performances selected quarterly to ensure a representative sample of Broadway's diverse offerings. This approach captures seasonal variations in the audience and provides a balanced dataset
+- **Sampling Method**: The survey is typically conducted annually, with performances selected quarterly to ensure a representative sample of Broadway's diverse productions. This approach captures seasonal variations in the audience and provides a balanced dataset
 - **Recruitment Method**: 
   - In-Person Distribution: Questionnaires are handed out to audience members during selected performances.
   - Online Access: Audiences can complete the survey online via a QR code provided at performances or through a link sent post-event.
   - Wi-Fi Login Prompt: Patrons connecting to a theatre’s Wi-Fi are also invited to participate in the survey.
 These varied recruitment strategies aim to ensure a high response rate and broad representation of attendees.
 
-Broadway also records and analyzes additional information, such as Broadway's Economic Contribution to New York City, the Audience for Touring Broadway, and the Economic Impact of Touring Broadway [@broadway_research_reports]. These surveys and studies provide a broader understanding of Broadway's influence and reach, offering a more complete view of its cultural and economic significance.
+Broadway also records and analyzes additional information, such as Broadway's Economic Contribution to New York City, the Audience for Touring Broadway, and the Economic Impact of Touring Broadway [@broadway_research_reports]. These surveys and studies provide a broader understanding of Broadway's influence and reach, presenting a more complete view of its cultural and economic significance.
 
 \newpage
 
@@ -868,7 +866,7 @@ output_table
 
 ```{r}
 #| label: fig-facet-by-year
-#| fig-cap: Average Weekly Gross Revenue Trends Across Months, spanning from 2010 to 2019.
+#| fig-cap: Average Weekly Gross Revenue Trends Across Months, spanning from 2010 to 2019. The visualization highlights both year-to-year growth and recurring seasonal patterns in Broadway's revenue performance. Notable peaks in revenue are observed around December, coinciding with the holiday season, and slight increases can also be seen during the summer months, potentially due to higher tourist activity. 
 #| echo: false
 #| warning: false
 #| message: false
