--- a/paper/references.bib
+++ b/paper/references.bib
@@ -200,3 +200,13 @@
     doi = {10.18637/jss.v103.i01},
   }
 
+@article{noor2022simple,
+  title={Simple random sampling},
+  author={Noor, Shagofah and Tajik, Omid and Golzar, Jawad},
+  journal={International Journal of Education \& Language Studies},
+  volume={1},
+  number={2},
+  pages={78--82},
+  year={2022},
+  publisher={LULU Publications}
+}
